UIUX-1785: fix alignment and position of .help-block text in record edit view

--- a/sugarcrm/styleguide/less/clients/base/components/drawer.less
+++ b/sugarcrm/styleguide/less/clients/base/components/drawer.less
@@ -40,6 +40,7 @@
 /* disables scrolling */
 #content.noscroll {
     overflow: hidden;
+    z-index: 0;
 }
 body.noscroll {
     overflow: hidden;
