--- a/sugarcrm/styleguide/less/sugar-specific/forms.less
+++ b/sugarcrm/styleguide/less/sugar-specific/forms.less
@@ -491,8 +491,10 @@ input[type=radio] {
 
 .help-block {
   font-size: 11px;
-  margin-bottom: -7px;
-
+  margin: 3px 0 0;
+  white-space: normal;
+  line-height: 13px;
+  display: inline-block;
 }
 .form-actions {
   border: none;
